2007-12-09  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Update version to 2.20.1 for release

2007-11-28  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/hex-document.h: added missing include for gtkwidget.h
	when the file is included directly

2007-11-28  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/gtkhex.h: fixed typo G_BEGIN_DECLS instead of G_END_DECLS

2007-09-17  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Update version to 2.20.0 for release

2007-09-02  Rodney Dawes  <dobey.pwns@gmail.com>

	* MAINTAINERS: I got hustled into this by a pre-commit script

2007-08-27  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Update version to 2.19.91 for release

2007-08-25  Rodney Dawes  <dobey.pwns@gmail.com>

	* src/gtkhex.c (gtk_hex_key_press):
	Change the return value to be gboolean instead of gint
	(gtk_hex_key_release):
	Turn off selection mode when Shift is released
	(gtk_hex_button_release):
	Enable selection mode if doing shift+click

2007-08-25  Rodney Dawes  <dobey.pwns@gmail.com>

	* src/preferences.c (create_prefs_dialog):
	Add mnemonics to a few labels, and set mnemonic widget if needed

	* src/ui.c (group_type_label[3]):
	Add mnemonics to the type labels, for the preferences dialog

	Fixes #466695

2007-08-25  Rodney Dawes  <dobey.pwns@gmail.com>

	* src/Makefile.am:
	* src/ghex-window.c (ghex_window_new):
	Pass PREFIX in to bonobo_ui_util_set_ui so that we can load the
	ui xml from the appropriate prefix

	Fixes #467384

2007-08-13  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in: Update version to 2.19.90 for release

2007-08-10  Jonathon Jongsma  <jjongsma@gnome.org>

	* src/hex-document.h: add G_BEGIN/END_DECLS around public declarations
	so that it can be easily included in C++ applications

2007-08-09  Rodney Dawes  <dobey.pwns@gmail.com>

	* src/gtkhex.c (gtk_hex_key_press):
	Handle keypad presses appropriately when numlock is on/off

	Fixes #464979

2007-08-08  Rodney Dawes  <dobey.pwns@gmail.com>
