@@ -1,3 +1,10 @@
+2007-11-30  Jonathon Jongsma  <jjongsma@gnome.org>
+
+	* src/gtkhex.c:
+	* src/gtkhex.h: connect to the HexDocument's document_changed signal and
+	redraw the widget so that the display gets updated when modifying the data
+	with hex_document_set_data().  Fix for bug #500358
+
 2007-12-09  Rodney Dawes  <dobey.pwns@gmail.com>
 
 	* configure.in: Update version to 2.20.1 for release
